Prevent the page from overflowing on the footer

--- a/noggin/static/css/main.css
+++ b/noggin/static/css/main.css
@@ -56,7 +56,7 @@
 
 
 html, body, .bodycontent {
-  height: 100vh;
+  min-height: 100vh;
   max-width: 100vw;
   margin: 0;
   display: flex;
